# galilei

./: .directory  .project  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  README  README.md  README_CMAKE  TODO  configure.in  configure.in.in  galilei.h  galilei.kdevelop  galilei_plugins.kdevelop  galileimacro.cmake  kgalileicenter.kdevelop  kgalileicenter.kdevprj  kgalileicenter.lsm  libgalilei.m4  prj.cmake  rfinder.cmake  svn-commit.tmp  upgalilei.kdevelop
cosinus/: Makefile.am  gdocsagree.cpp  gdocsdisagree.cpp  gdocsprofilessims.cpp  gdocssims.cpp  ggenericsims.cpp  ggenericsims.h  ggroupsdocssims.cpp  ggroupsdocssims.h  ggroupsdocssimscosinus.cpp  ggroupsdocssimscosinus.h  gprofilesagree.cpp  gprofilesagree.h  gprofilesdisagree.cpp  gprofilesdisagree.h  gprofilesdocssimscosinus.cpp  gprofilesdocssimscosinus.h  gprofilesgeneric.cpp  gprofilesgeneric.h  gprofilesgroupssimscosinus.cpp  gprofilesgroupssimscosinus.h  gprofilessimscosinus.cpp  gprofilessimscosinus.h  gsubprofilesdocssims.cpp  gsubprofilesdocssims.h  gsubprofilesgroupssims.cpp  gsubprofilesgroupssims.h  gsubprofilessims.cpp  gsubprofilessims.h
cosinus/kde/: Makefile.am  dlgconfig_qt.ui  dlgconfigagree_qt.ui  dlgconfigdisagree_qt.ui  dlgconfiggroupsdocs_qt.ui  dlgconfigprofiles_qt.ui  dlgconfigprofilesdocs_qt.ui  dlgconfigprofilesgroups_qt.ui  dlgconfigsubprofiles_qt.ui  dlgconfigsubprofiles_qt.ui.h  dlgconfigsubprofilesdocs_qt.ui  dlgconfigsubprofilesgroups_qt.ui  gdocsagree_kde.cpp  gdocsdisagree_kde.cpp  gdocssimscosinus_kde.cpp  ggenericsims_kde.cpp  ggenericsims_kde.h  ggroupsdocssims_kde.cpp  ggroupsdocssimscosinus_kde.cpp  gprofilesagree_kde.cpp  gprofilesdisagree_kde.cpp  gprofilesdocssimscosinus_kde.cpp  gprofilesgroupssims_kde.cpp  gprofilesgroupssimscosinus_kde.cpp  gprofilessims_kde.cpp  gprofilessimscosinus_kde.cpp  gsubprofilesdocssims_kde.cpp  gsubprofilesgroupssims_kde.cpp  gsubprofilessims_kde.cpp  gsubprofilessimscosinus_kde.cpp
email/: .plug_desc  CMakeLists.txt  Makefile.am  email.cpp  email.h  gfilteremail.cpp  gfilteremail.h  gfilteremail_kde.cpp
email/frontend/: email_frontend.cmake
email/kde/: Makefile.am  gfilteremail_kde.cpp
feedback/: .plug_desc  CMakeLists.txt  Makefile.am  dlgconfig_qt.ui  feedback.cpp  feedback.h  gprofilecalcfeedback.cpp  gprofilecalcfeedback.h  gprofilecalcfeedback_kde.cpp
feedback/frontend/: feedback_frontend.cmake
feedback/kde/: Makefile.am  dlgconfig_qt.ui  gprofilecalcfeedback_kde.cpp
galilei/: CMakeLists.txt  Doxyfile  Makefile.am  galilei.mimes  galileidoc.h  galileimacro.cmake
galilei/docs/: Makefile.am  galilei_docs.cmake  ganalyzer.cpp  ganalyzer.h  gbalancedlinks.cpp  gbalancedlinks.h  gconceptnode.cpp  gconceptnode.h  gconceptnodes.cpp  gconceptnodes.h  gconceptrecord.cpp  gconceptrecord.h  gconcepttree.cpp  gconcepttree.h  gdcmetadata.cpp  gdcmetadata.h  gdoc.cpp  gdoc.h  gdocanalyse.cpp  gdocanalyse.h  gdocanalysemanager.cpp  gdocanalysemanager.h  gdocanalyze.cpp  gdocanalyze.h  gdoclist.cpp  gdoclist.h  gdocoptions.cpp  gdocoptions.h  gdocprofsim.cpp  gdocprofsim.h  gdocprofsims.cpp  gdocprofsims.h  gdocproxy.h  gdocproxymem.h  gdocrefurl.cpp  gdocrefurl.h  gdocs.cpp  gdocs.h  gdocsim.cpp  gdocsim.h  (+76 more)
galilei/engines/: Makefile.am  galilei_engines.cmake  gcomputerank.cpp  gcomputerank.h  gcomputesugs.cpp  (+41 more)
gca/: .plug_desc  CMakeLists.txt  Makefile.am  gca.cpp  gca.h  gcachromo.cpp  gcachromo.h  gcagroup.cpp  gcagroup.h  gcagroupdocs.cpp  gcagroupprofiles.cpp  gcaheuristic.cpp  gcaheuristic.h  gcainst.cpp  gcainst.h  gcakmeans.cpp  gcakmeans.h  gcaobj.cpp  gcaobj.h  gcaplugin.h  gcaplugin.hh  gcaprom.cpp  gcaprom.h  gchromoir.cpp  gchromoir.h  ggca.cpp  ggca.h  ggcachromo.cpp  ggcachromo.h  ggcagroup.cpp  ggcagroup.h  ggcagrouping.cpp  ggcagrouping.h  ggcaheuristic.cpp  ggcaheuristic.h  ggcainst.cpp  ggcainst.h  ggcaobj.cpp  ggcaobj.h  ggcaprom.cpp  (+17 more)
gravitation/: .plug_desc  CMakeLists.txt  Makefile.am  dlgconfig_qt.ui  ggroupcalcgravitation.cpp  ggroupcalcgravitation.h  ggroupcalcgravitation_kde.cpp  gravitation.cpp  gravitation.h
html/: CMakeLists.txt  Makefile.am  codetochar.cpp  gfilterhtml.cpp  gfilterhtml.h  gfilterhtml_kde.cpp  ghtmlconverter.cpp  ghtmlconverter.h  html.cpp  html.h
if/: CMakeLists.txt  if.cpp  if.h
kgalileicenter/: CMakeLists.txt  CreateDbFromDir.py  DbCreation-mysql  DbModel.sql  DbStopList.sql  DbUsers.sql  Makefile.am  addfdbkdlg.ui  configure.cpp  configure.h  configure.ui  configure.ui.h  kdoc.cpp  kdoc.h  kgalileicenter.cpp  kgalileicenter.desktop  kgalileicenter.h  kgalileicenter_dlg.cpp  kgalileicenter_init.cpp  kgalileicenterdoc.cpp  kgalileicenterdoc.h  kgalileicenterui.rc  kgalileicenterview.cpp  kgalileicenterview.h  kprgconsole.cpp  kprgconsole.h  ksommap.cpp  ksommap.h  kview.cpp  kview.h  kviewchromos.cpp  kviewchromos.h  kviewclasses.cpp  kviewclasses.h  kviewclasses.ui  kviewcommunities.cpp  kviewcommunities.h  kviewcommunity.cpp  kviewcommunity.h  kviewdebug.cpp  (+109 more)
langar/: CMakeLists.txt  Makefile.am  glangar.cpp  glangar.h  langar.cpp  langar.h  stopList_ar.txt
langde/: CMakeLists.txt  Makefile.am  german_stem.h  glangde.cpp  glangde.h  langde.cpp  langde.h  string_util.h
langdk/: CMakeLists.txt  Makefile.am  danish_stem.h  glangdk.cpp  glangdk.h  langdk.cpp  langdk.h
langen/: CMakeLists.txt  Makefile.am  glangen.cpp  glangen.h  glangen_kde.cpp  langen.cpp  langen.h
langes/: CMakeLists.txt  Makefile.am  glanges.cpp  glanges.h  langes.cpp  langes.h  spanish_stem.h
langfi/: CMakeLists.txt  Makefile.am  finnish_stem.h  glangfi.cpp  glangfi.h  langfi.cpp  langfi.h  stemming.h  string_util.h  utilities.h
langfr/: CMakeLists.txt  Makefile.am  glangfr.cpp  glangfr.h  glangfr_kde.cpp  langfr.cpp  langfr.h
langhu/: CMakeLists.txt  langhu.cpp  langhu.h
langit/: CMakeLists.txt  Makefile.am  glangit.cpp  glangit.h  italian_stem.h  langit.cpp  langit.h  meta.h  string_util.h
langnl/: CMakeLists.txt  Makefile.am  glangnl.cpp  glangnl.h  glangnl_kde.cpp  langnl.cpp  langnl.h
langno/: CMakeLists.txt  Makefile.am  glangno.cpp  glangno.h  langno.cpp  langno.h  norwegian_stem.h
(+1830 files in other folders)
