INCLUDES = $(all_includes) -I$(top_srcdir)
pkglib_LTLIBRARIES =  libgca.la
libgca_la_LDFLAGS = -module -avoid-version
libgca_la_SOURCES = ggroupinggga.cpp gobjir.cpp gchromoir.cpp ggroupir.cpp \
	ginstir.cpp gir.cpp girheuristic.cpp girprom.cpp
libgca_la_LIBADD=
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS = . frontend

