INCLUDES = $(all_includes) -I$(top_srcdir)
pkglib_LTLIBRARIES =  libgca.la
libgca_la_LDFLAGS = -module -avoid-version
libgca_la_SOURCES = ggcagrouping.cpp ggcaobj.cpp ggcachromo.cpp ggcagroup.cpp \
	ggcainst.cpp ggca.cpp ggcaheuristic.cpp ggcaprom.cpp
libgca_la_LIBADD=
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS = . frontend

