INCLUDES = $(all_includes) -I$(top_srcdir) -I$(R_LIB) -I$(GALILEI_LIB) -I$(QTDIR)/include
lib_LTLIBRARIES =  ../libhtml.la ../libhtml_dlg.la
___libhtml_la_LDFLAGS = -module -avoid-version
___libhtml_la_SOURCES = gfilterhtml.cpp
___libhtml_la_LIBADD=$(GALILEI_LIB)/filters/libgalilei_filters.la
___libhtml_dlg_la_LDFLAGS = -module -avoid-version
___libhtml_dlg_la_SOURCES = gfilterhtml_kde.cpp
___libhtml_dlg_la_LIBADD=$(GALILEI_LIB)/filters/libgalilei_filters.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =

